lintian (1.23.43) UNRELEASED; urgency=low

  * lib/Spelling.pm:
    + [RA] Add a spelling correction for PostgreSQL and capitalization
      corrections for it, Xfce, Python, and MySQL.

 -- Russ Allbery <rra@debian.org>  Mon, 07 Jan 2008 23:58:47 -0800

lintian (1.23.42) unstable; urgency=low

  The "what did you do on your Christmas vacation?" release.

  * checks/binaries:
    + [RA] Don't warn about unstripped binaries in .../lib/debug.  Some
      packages include debugging symbols in the main package.
    + [RA] Allow rpath pointing to /usr/lib/games/<package>.  Thanks, Bas
      Wijnen.  (Closes: #456318)
    + [RA] Exclude nsswitch modules from multiple SONAME and package
      naming checks.
  * checks/changelog-file{.desc,}:
    + [RA] Don't spell-check lines that include the word "spelling".
      Thanks, Andreas Hoenen.  (Closes: #456515)
    + [RA] Allow long no-whitespace lines even when spaces or bullets
      precede the text.
  * checks/common_data.pm:
    + [RA] Remove the obsolete base section.  (Policy change pending).
  * checks/control-file{.desc,}:
    + [RA] Include the package name in stronger-dependency-implies-weaker.
    + [RA] Fix stronger-dependency-implies-weaker description cut and
      paste error.  Thanks, Rafael Laboissiere.  (Closes: #456405)
  * checks/copyright-file{.desc,}:
    + [RA] Warn about packages covered by the GPL and linked with libssl
      that don't list other common licenses or mention a license exception
      or exemption.  Requested by Joerg Jaspert.  (Closes: #454238)
  * checks/cruft:
    + [RA] Ignore debian/config.cache.
  * checks/debconf{.desc,}:
    + Remove partially-translated-question at the request of Christian
      Perrier.  Only the translator could fix this, and debconf doesn't
      show the translation unless it's complete.  (Closes: #459293)
  * checks/debian-readme{.desc,}:
    + Combine readme-debian-{is,contains}-debmake-template and be less